# noetix_n2_gym

./: .gitignore  .ignore  MUJOCO_LOG.TXT  README.md
humanoid/algo/: __init__.py  amp_him_dl_on_policy_runner.py  amp_him_moe_ppo.py  him_moe_actor_critic.py
humanoid/algo/amp_him_ppo/: __init__.py  amp_him_on_policy_runner.py  amp_him_ppo.py  him_actor_critic.py  him_estimator.py  him_rollout_storage.py
humanoid/algo/camp_him_ppo/: __init__.py  camp_him_on_policy_runner.py  camp_him_ppo.py
humanoid/algo/dwl_ppo/: __init__.py  dwl_actor_critic.py  (+4 more)
humanoid/amp_utils/: cdiscriminator.py  discriminator.py  motion_loader.py  motion_util.py  replay_buffer.py
humanoid/csi_utils/: csi_replay_buffer.py
humanoid/envs/: __init__.py
humanoid/scripts/: play.py  record_motion.py  test_env.py  train.py  train_server.py
humanoid/utils/: helpers.py  task_registry.py  terrain.py  utils.py
resources/robots/N2_20dof/: CMakeLists.txt  package.xml
resources/robots/N2_20dof/config/: joint_names_N2_NEW_CALF.SLDASM.yaml
resources/robots/N2_20dof/launch/: display.launch  gazebo.launch
resources/robots/N2_20dof/meshes/: l_arm_elbow_Link.STL  l_arm_hand_Link.STL  l_leg_ankle_pitch_link.STL  l_leg_ankle_roll_link.STL  l_leg_hip_yaw_link.STL  l_leg_knee_link.STL  r_arm_elbow_Link.STL  r_arm_hand_Link.STL  r_leg_ankle_pitch_link.STL  r_leg_ankle_roll_link.STL  r_leg_hip_yaw_link.STL  r_leg_knee_link.STL
resources/robots/N2_20dof/urdf/: N2_20dof.urdf  N2_NEW_CALF.SLDASM.csv
sim2sim/: sim2sim.py
sim2sim/configs/: n2_10dof.yaml  n2_18dof.yaml
sim2sim/policy/: policy.pt
(+55 files in other folders)
